<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginBottom="12dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/favourite_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Fav_Layout_Movie_Name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/favourite_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fav_Rating"
            android:textColor="@color/colorRating"
            android:textSize="@dimen/text_size_Small" />

        <TextView
            android:id="@+id/favourite_date"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="bottom"
            android:layout_margin="@dimen/Layout_margin"
            android:text="@string/Fav_Release_Date"
            android:textColor="@color/LightBlack"
            android:textSize="@dimen/Release_Date_text_size" />


    </RelativeLayout>


    <TextView
        android:id="@+id/favourite_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="16dp"
        android:maxLines="5"
        android:text="@string/Fav_Movie_Description"
        android:textColor="@color/LightBlack"
        android:textSize="@dimen/text_size_Small" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />


</LinearLayout>