<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MovieDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Layout_margin"
                        android:text="@string/MovieName"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp">

                        <TextView
                            android:id="@+id/rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/Layout_margin"
                            android:text="@string/Main_Rating"
                            android:textColor="@color/colorRating"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="wrap_content"
                            android:layout_height="19dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:gravity="bottom"
                            android:layout_margin="@dimen/Layout_margin"
                            android:text="@string/ReleaseDate"
                            android:textColor="@color/LightBlack"
                            android:textSize="12sp" />


                    </RelativeLayout>


                    <TextView
                        android:id="@+id/overView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_marginTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/OverView"
                        android:textColor="@color/LightBlack"
                        android:textSize="20sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="1dp"
                            android:layout_centerVertical="true"
                            android:background="@android:color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="8dp"
                            android:text="@string/WatchTrailer"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />

                        <View
                            android:layout_width="100dp"
                            android:layout_height="1dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:background="@android:color/black" />

                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/trailer_load_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/load5" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/trailer_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="1dp"
                            android:background="@android:color/black" />

                        <View
                            android:layout_width="100dp"
                            android:layout_height="1dp"
                            android:layout_centerInParent="true"
                            android:background="@android:color/black" />

                        <View
                            android:layout_width="100dp"
                            android:layout_height="1dp"
                            android:layout_alignParentEnd="true"
                            android:background="@android:color/black" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:text="@string/PeopleReviews"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                    <ImageView
                        android:id="@+id/review_load_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/load5" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/reviews_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />


                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/set_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:src="@drawable/ic_favorite"
            app:backgroundTint="@color/colorPrimary" />

    </RelativeLayout>


</LinearLayout>